🚀 Обновление RSI бота v2.0
✨ Новые возможности:
- 🌐 Обновленный веб-интерфейс с удобным управлением настройками
- 🔄 Гибридный коннектор с поддержкой Binance/Kraken/Yahoo/CoinGecko
- 💰 Быстрое добавление популярных монет (BTC, DOGE, PEPE, SUI и др.)
- 📊 Автоматическая валидация символов и форматирование
- 🎯 Улучшенная система уведомлений с группировкой по времени

🔧 Технические улучшения:
- Добавлен гибридный коннектор для надежности получения данных
- Обновлена логика RSI анализа с отслеживанием переходов
- Улучшена обработка ошибок API и fallback между источниками
- Оптимизирован веб-интерфейс с anti-cache функционалом

📋 Документация:
- Добавлено подробное руководство по настройке интерфейса
- Обновлен README с описанием всех возможностей

🛠️ Совместимость:
- Работает с Kraken API (стабильно)
- Готов к работе с Binance API на продакшене
- Fallback через Yahoo Finance и CoinGecko

--- a/.gitignore
+++ b/.gitignore
@@ -19,19 +19,13 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# Виртуальное окружение
+# Virtual Environment
 venv/
 env/
 ENV/
-.venv/
 
-# Логи
-*.log
-logs/
-
-# База данных
+# Database
 *.db
 *.sqlite
 *.sqlite3
@@ -41,9 +35,8 @@ logs/
 .idea/
 *.swp
 *.swo
-*~
 
-# Операционная система
+# OS
 .DS_Store
 .DS_Store?
 ._*
@@ -52,18 +45,18 @@ logs/
 ehthumbs.db
 Thumbs.db
 
-# Временные файлы
-*.tmp
-*.temp
-.cache/
+# Logs
+*.log
+logs/
 
-# Конфигурация с секретами (если потребуется)
-# config_secret.py
-# .env
-
-# Статические файлы (если генерируются)
-static/generated/
-
-# Тестовые файлы
+# Debug files
+debug_*.py
 test_*.py
-*_test.py 
+
+# Config secrets (если есть приватные ключи)
+secrets.py
+.env
+
+# Temporary files
+temp/
+tmp/ 
