--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ jinja2==3.1.6
 markupsafe==3.0.2
 
 # База данных
-# SQLite встроен в Python
+# SQLite встроен в Python (для локальной разработки)
+psycopg2-binary==2.9.9  # PostgreSQL для Railway
 
 # Криптография (для Telegram бота)
 pycryptodome==3.22.0
