--- a/requirements-minimal.txt
+++ b/requirements-minimal.txt
@@ -1,4 +1,4 @@
-# Основные зависимости для RSI Trading Bot
+# Минимальные зависимости для RSI Trading Bot (запасной вариант)
 aiogram==3.3.0
 aiohttp==3.9.5
 aiohttp-cors==0.8.1
@@ -7,7 +7,6 @@ jinja2==3.1.6
 
 # Анализ данных
 pandas==2.2.1
-pandas-ta==0.3.13
 numpy==1.24.3
 
 # HTTP запросы
@@ -18,7 +17,6 @@ psycopg2-binary==2.9.9
 
 # Финансовые данные
 yfinance==0.2.28
-python-binance==1.0.19
 
 # Дополнительные утилиты  
 python-dateutil==2.9.0.post0
